Archive2/ba/7957c28af6701f/output
main.cpp:55:22: error: declaration of 'operator()' as non-function
     >::type operator() const
                      ^
main.cpp:55:22: error: expected ';' at end of member declaration
main.cpp:56:5: error: expected unqualified-id before '{' token
     {
     ^
main.cpp:63:21: error: expected type-specifier before '(' token
     >::type operator(typename A a) const
                     ^
main.cpp:71:21: error: expected type-specifier before '(' token
     >::type operator(typename A a, typename B b) const
                     ^
